--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <div class="container" id="app">
-        
+        <!-- sidebar contatti -->
+        <aside>
+            <div class="top">
+                <div class="utente">
+                    <img src="img/avatar_1.jpg" alt="avatar">
+                    <span>Nome Utente</span>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-circle-notch"></i>
+                    <i class="fas fa-comment-alt"></i>
+                    <i class="fas fa-ellipsis-v"></i>
+                </div>
+               
+            </div>
+            <div class="bottom_container">
+
+            </div>
+        </aside>
+        <!-- fine sidebar contatti -->
+        <div class="msg">
+
+        </div>
     </div>
 </body>
 </html>
