--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
                     
                 </div>
                 <div class="contatti">
-                    
+                    <div class="utente">
+                        <img src="img/avatar_1.jpg" alt="avatar">
+                        <span>Nome Utente</span>
+                    </div>
+                    <div class="utente">
+                        <img src="img/avatar_1.jpg" alt="avatar">
+                        <span>Nome Utente</span>
+                    </div>
+                    <div class="utente">
+                        <img src="img/avatar_1.jpg" alt="avatar">
+                        <span>Nome Utente</span>
+                    </div>
                 </div>
             </div>
             <!-- fine sezione bottom -->
