--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="bottom">
                 <div class="search_bar">
                     <div>
-                        <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Cerca tra i contatti">
+                        <label for="search"><i class="fas fa-search"></i></label>
+                        <input type="text" id="search" placeholder="Cerca tra i contatti">
                     </div>
                     
                 </div>
