--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- sezione top -->
             <div class="top">
                 <div class="utente">
-                    <img src="img/avatar_1.jpg" alt="avatar">
+                    <img src="img/avatar_1.jpg" class="utente_img" alt="avatar">
                     <span>Nome Utente</span>
                 </div>
                 <div class="icons">
@@ -51,15 +51,15 @@
                 </div>
                 <div class="contatti">
                     <div class="utente">
-                        <img src="img/avatar_1.jpg" alt="avatar">
+                        <img src="img/avatar_1.jpg" class="utente_img" alt="avatar">
                         <span>Nome Utente</span>
                     </div>
                     <div class="utente">
-                        <img src="img/avatar_1.jpg" alt="avatar">
+                        <img src="img/avatar_1.jpg" class="utente_img" alt="avatar">
                         <span>Nome Utente</span>
                     </div>
                     <div class="utente">
-                        <img src="img/avatar_1.jpg" alt="avatar">
+                        <img src="img/avatar_1.jpg" class="utente_img" alt="avatar">
                         <span>Nome Utente</span>
                     </div>
                 </div>
@@ -68,7 +68,21 @@
         </aside>
         <!-- fine sidebar contatti -->
         <div class="msg">
-
+            <div class="top">
+                <div class="utente p_tb_10">
+                    <img src="img/avatar_1.jpg" class="utente_img" alt="avatar">
+                    <div>
+                        <span>Nome Utente</span>
+                        <span>Ultimo accesso : </span>
+                    </div>
+                    
+                </div>
+                <div class="top_right">
+                    <i class="fas fa-circle-notch m_lr_5"></i>
+                    <i class="fas fa-comment-alt m_lr_5"></i>
+                    <i class="fas fa-ellipsis-v m_lr_5"></i>
+                </div>
+            </div>
         </div>
     </div>
 </body>
