add : msg sections => center  , bottom, input

--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
                     <i class="fas fa-ellipsis-v m_lr_5"></i>
                 </div>
             </div>
+            <div class="msg_center">
+            </div>
+            <div class="msg_bottom">
+                <i class="far fa-smile"></i>
+                <input type="text" placeholder="Scrivi messaggio...">
+                <i class="fas fa-microphone"></i>
+            </div>
         </div>
     </div>
 </body>
