add  : msg > top > utente > div > first span nome da vue

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <div class="utente p_tb_10">
                     <img src="img/avatar_1.jpg" class="utente_img" alt="avatar">
                     <div>
-                        <span>Nome Utente</span>
-                        <span>Ultimo accesso : </span>
+                        <span>Nome Utente {{nome}}</span>
+                        <span>Ultimo accesso :</span>
                     </div>
                     
                 </div>
