--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             <div class="bottom">
                 <div class="search_bar">
                     <div>
-                        <label for="search"><i class="fas fa-search"></i></label>
-                        <input type="text" id="search" placeholder="Cerca tra i contatti">
+                        <label for="search"><i class="fas fa-search" @click="test"></i></label>
+                        <input type="text" id="search" placeholder="Cerca tra i contatti" v-model="ricerca">
                     </div>
                     
                 </div>
                 <div class="contatti">
-                    <div :class="{grey : contact.colore && index == indice}" class="utente" v-for="(item,index) in contacts" @click="visualizza_msg(index); addColor(item,index)">
+                    <div :class="{grey : contact.colore && index == indice}" class="utente" v-for="(item,index) in filteredContacts" @click="visualizza_msg(index); addColor(item,index)">
                         <img :src="'img/' + 'avatar' + item.avatar + '.jpg'" class="utente_img"  :alt="contact.name">
                         <span>{{item.name}} {{index}}</span>
                     </div>
@@ -119,7 +119,7 @@
             </div>
             <div class="msg_bottom">
                 <i class="far fa-smile"></i>
-                <input type="text" placeholder="Scrivi messaggio...">
+                <input type="text" placeholder="Scrivi messaggio..." v-on:keyup.enter="pushMsg" v-model="messaggio">
                 <i class="fas fa-microphone"></i>
             </div>
         </div>
