--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script><!--link vue cdn-->
-
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script><!--link day.js cdn-->
 </head>
 <body>
     <div class="container" id="app">
@@ -46,7 +46,7 @@
             <div class="bottom">
                 <div class="search_bar">
                     <div>
-                        <label for="search"><i class="fas fa-search" @click="test"></i></label>
+                        <label for="search"><i class="fas fa-search"></i></label>
                         <input type="text" id="search" placeholder="Cerca tra i contatti" v-model="ricerca">
                     </div>
                     
