test : auto scroll to bottom

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <i class="fas fa-ellipsis-v m_lr_5"></i>
                 </div>
             </div>
-            <div class="msg_center" id="messaggi">
+            <div class="msg_center" id="messaggi" @click="updateScroll">
                 <!-- <div class="clearfix"> 
                     <div class="msg_sent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, nesciunt.</div>
                 </div>
